<resources>
    <string name="app_name">BeSpoke</string>

    <string name="CommonEmailID">Email ID</string>
    <string name="CommonPassword">Password</string>
    <string name="CommonLogin">Login</string>
    <string name="ForgotPassword"><u>Forgot Password?*</u></string>
    <string name="NewUser">New User</string>
    <string name="EnterPassword">Enter Password</string>
    <string name="ReEnterPassword">Re-enter Password</string>
    <string name="CommonUserName">User Name</string>

    <string name="SignUpEmailRequired">Enter a valid email address.</string>
    <string name="SignUpPasswordRequired">Enter password</string>
    <string name="SignUpRePasswordRequired">Re-enter password</string>
    <string name="SignUpUserNameRequired">Enter User Name</string>
    <string name="MessageNoInternetConnection">Please check internet connection.</string>

    <string name="SignUpPasswordsNotMatch">Password and Re-enter Password Not Match</string>
    <string name="AdminText">Admin</string>
    <string name="NormalUser">Normal User</string>
    <string name="SuperAdmin">Super Admin</string>
    <string name="CancelBtnText">Cancel</string>
    <string name="CreateAccount">Create Account</string>
    <string name="ResetPassword">Reset Password</string>
    <string name="AlreadyRegistered"><u>Already Registered? Login here</u></string>
    <string name="title_activity_home">Dashboard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="LeftPanelHome">Home</string>
    <string name="LeftPanelViewIssues">Issues</string>
    <string name="LeftPanelViewRequests">Requests</string>
    <string name="LeftPanelDocuments">Documents</string>
    <string name="LeftPanelReports">Reports</string>
    <string name="LeftPanelCategory">Category</string>
    <string name="LeftPanelSettings">Settings</string>
    <string name="LeftPanelLogout">Logout</string>
    <string name="MessagePleaseWait">Please wait...</string>
    <string name="RequestDetail">Request Description</string>
    <string name="IssuesDetail">Issue Description</string>
    <string name="id">ID:</string>
    <string name="idtxt">Id</string>
    <string name="ShortDescription">Short description:</string>
    <string name="ShortDescriptiontxt">Short description</string>
    <string name="Description">Description:</string>
    <string name="Descriptiontxt">Description</string>
    <string name="Category">Category:</string>
    <string name="Categorytxt">Category</string>
    <string name="AffectedArea">Affected area:</string>
    <string name="AffectedAreatxt">Affected area</string>
    <string name="User">User:</string>
    <string name="Usertxt">User</string>
    <string name="IssueOpenDate">Issue open date:</string>
    <string name="IssueOpenDatetxt">Issue Open Date</string>
    <string name="SelectIssueOpenDatetxt">Select Issue Open Date:</string>
    <string name="AssignedTo">Assigned to:</string>
    <string name="AssignedTotxt">Assigned to</string>
    <string name="Status">Status:</string>
    <string name="TicketStatus">Ticket status:</string>
    <string name="TicketStatustxt">Ticket status</string>
    <string name="CommonOK">OK</string>
    <string name="RegisterdSuccessfully">User Registerd Successfully!</string>

    <string name="SelectCategory">Select Category:</string>

    <string name="SubCategory">SubCategory:</string>
    <string name="SubCategoryHint">Sub Category</string>
    <string name="EnablePasscodeMsg">Enter Passcode to Enable the Touch Id.</string>
    <string name="DisablePasscodeMsg">Enter Passcode to Disable the Touch Id.</string>
    <string name="touchEnabled">Touch Enabled</string>

    <string name="CloseTicketBtn">Close ticket</string>
    <string name="EmailUserBtn">Email user</string>
    <string name="AddIssue">Add Issue</string>
    <string name="SubmitTicketBtn">Submit Ticket</string>
    <string name="EmailBtn">Email</string>
    <string name="AddRequest">Add Request</string>
    <string name="EnterShortDescription">Enter ShortDescription!</string>
    <string name="EnterDescription">Enter Description!</string>

    <string name="DashboardIssues">Issues</string>
    <string name="DashboardRequest">Request</string>
    <string name="DashboardDocuments">Documents</string>
    <string name="DashboardReports">Reports</string>


    <string name="SelectCategoryAlert">Please Select Category!</string>
    <string name="SelectAffectedAreaAlert">Please Select Affected Area!</string>
    <string name="SelectTicketAlert">Please Select Ticket Status!</string>
    <string name="SelectAssignedToAlert">Please Select Assigned To User!</string>
    <string name="Alert">Alert!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="RoleAlert">Please select your Role!</string>
    <string name="SomethingWentWrong">Something went wrong please try again later!</string>
    <string name="ErrorTitle">Error!</string>
    <string name="Message">Message</string>
    <string name="title_activity_chart">ChartActivity</string>
    <string name="CommonYes">Yes</string>
    <string name="CommonNo">No</string>
    <string name="ConfirmCloseTicket">Do you want to close issue!</string>

    <string name="ErrorInCreatingTicket">Error in Creating issue please try again later!</string>
    <string name="IssueCreatedSuccessfully">Your issue created successfully!</string>
    <string name="RequestCreatedSuccessfully">Your Request created successfully!</string>
    <string name="ErrorInUpdateTicket">Error in Updating Ticket status please try later!</string>
    <string name="TicketUpdatedSuccessfully">Ticket Status Updated  successfully!</string>
    <string name="TicketUpdatedSuccessfullyMsg">Ticket Updated  successfully!</string>

    <string name="LogoutConfirmationMessage">Do you want to logout?</string>
    <string name="UpdateTicketBtn">Update ticket</string>
    <string name="UpdateIssueTitle">Update Issue</string>
    <string name="UpdateRequestTitle">Update Request</string>
    <string name="Edit">Edit</string>

    <string name="CreateCategory">Create Category</string>
    <string name="CreateSubCategory">Create Subcategory</string>
    <string name="CategoryName">Category Name</string>
    <string name="SubCategoryName">Subcategory Name</string>
    <string name="EnterCategoryName">Enter Category Name</string>
    <string name="CategoryCreatedSuccessfully">Category created successfully!</string>
    <string name="SubCategoryCreatedSuccessfully">Subcategory created successfully!</string>
    <string name="DocumentCategory">Document Category</string>
    <string name="Documents">Document List</string>
    <string name="NoDocumentsAvailable">No Document Available</string>
    <string name="Name">Name:</string>
    <string name="Submit">Submit</string>
    <string name="AlreadyClosed">Issue is already closed!</string>
    <string name="DocCategory">Document\'s Category</string>
</resources>
