<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_add_issue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/container_toolbar">


        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dim_padding_10dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/dim_padding_10dp">

            <EditText
                android:id="@+id/edtShortDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/ShortDescriptiontxt"
                android:layout_marginBottom="@dimen/dim_padding_10dp"
                android:layout_marginTop="@dimen/dim_padding_10dp"
                android:textSize="@dimen/default_textsize_large"
                android:visibility="visible" />

            <include layout="@layout/divider" />

            <EditText
                android:id="@+id/edtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dim_padding_10dp"
                android:layout_marginTop="@dimen/dim_padding_10dp"
                android:gravity="left|top"
                android:hint="@string/Descriptiontxt"
                android:minHeight="60dp"
                android:textSize="@dimen/default_textsize_large"
                android:visibility="visible"
                android:background="@null"/>

            <include layout="@layout/divider" />

            <TextView
                android:id="@+id/tvSelectCategoryLbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:text="@string/SelectCategory"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/default_textsize_large"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tvSelectCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/margin_10dp"
                android:drawablePadding="@dimen/dim_padding_5dp"
                android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
                android:gravity="left"
                android:text="@string/LeftPanelCategory"
                android:textSize="@dimen/default_textsize_medium"
                android:visibility="visible" />

            <include layout="@layout/divider" />

            <TextView
                android:id="@+id/tvSelectAffectedAreaLbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:text="@string/AffectedArea"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/default_textsize_large"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tvSelectAffectedArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/margin_10dp"
                android:drawablePadding="@dimen/dim_padding_5dp"
                android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
                android:gravity="left"
                android:text="@string/AffectedArea"
                android:textSize="@dimen/default_textsize_medium"
                android:visibility="visible" />

            <include layout="@layout/divider" />

            <EditText
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/margin_10dp"
                android:hint="@string/Usertxt"
                android:textSize="@dimen/default_textsize_medium"
                android:background="@null"/>

            <include layout="@layout/divider" />
            <TextView
                android:id="@+id/tvSelectIssueOpenDateLbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:text="@string/SelectIssueOpenDatetxt"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/default_textsize_large" />
            <TextView
                android:id="@+id/tvIssueOpenDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/margin_10dp"
                android:hint="@string/IssueOpenDatetxt"
                android:textSize="@dimen/default_textsize_medium"
                android:background="@null"/>

            <include layout="@layout/divider" />

            <TextView
                android:id="@+id/tvTicketStatusLbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:text="@string/TicketStatus"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/default_textsize_large"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tvTicketStatusValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/margin_10dp"
                android:drawablePadding="@dimen/dim_padding_5dp"
                android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
                android:gravity="left"
                android:text="@string/TicketStatustxt"
                android:textSize="@dimen/default_textsize_medium"
                android:visibility="visible" />

            <include layout="@layout/divider" />
            <TextView
                android:id="@+id/tvAssignedToLbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:text="@string/AssignedTo"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/default_textsize_large"
                android:visibility="visible" />
            <TextView
                android:id="@+id/tvAssignedTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/margin_10dp"
                android:hint="@string/AssignedTotxt"
                android:textSize="@dimen/default_textsize_medium"
                android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
                android:background="@null"/>

            <include layout="@layout/divider" />

            <LinearLayout
                android:id="@+id/layoutBtns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:layout_marginBottom="@dimen/dim_padding_10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSubmitTicket"
                    style="@style/button_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dim_padding_10dp"
                    android:layout_weight="1"
                    android:text="@string/SubmitTicketBtn"></Button>

                <Button
                    android:id="@+id/btnEmail"
                    style="@style/button_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dim_padding_10dp"
                    android:layout_weight="1"
                    android:text="@string/EmailBtn"></Button>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
